Change ThreeColoringForGraphAndColoredNeighbors to lazy iterator